--- a/pepeizqs deals web/Pages/bundle.cshtml
+++ b/pepeizqs deals web/Pages/bundle.cshtml
@@ -85,7 +85,7 @@
 	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Bundle>(RenderMode.Server, new { 
+@(await Html.RenderComponentAsync<Componentes.Secciones.Bundle>(RenderMode.ServerPrerendered, new { 
 	idioma = Model.idioma, 
 	bundleId = Model.bundle.Id, 
 	modulo = false 
