--- a/pepeizqs deals web/Pages/Bundles.cshtml
+++ b/pepeizqs deals web/Pages/Bundles.cshtml
@@ -53,6 +53,6 @@
 	descripcion = descripcion
 }))
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.Server, new { 
+@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.ServerPrerendered, new { 
 	idioma = Model.idioma
 }))
