--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -18,14 +18,6 @@
     }
 </script>
 
-<Title>
-   @titulo • pepeizq's deals
-</Title>
-
-<Meta Property="og:title" Content="@titulo" />
-<Meta Property="og:description" Content="@Herramientas.Idiomas.CogerCadena(idioma, "Free.String11")" />
-<Meta Property="robots" Content="index, follow" />
-
 @if (juegosActuales.Count > 0)
 {
 	<h1 style="font-size: 23px;">
@@ -315,11 +307,6 @@
     [Parameter]
     public string idioma { get; set; }
 
-    [Parameter]
-    public string dominio { get; set; }
-
-    private string titulo = string.Empty;
-
     private List<Juegos.JuegoGratis> juegosActuales = new List<Juegos.JuegoGratis>();
     private List<Gratis2.GratisComponente> gratisPasados = new List<Gratis2.GratisComponente>();
 
@@ -399,8 +386,7 @@
                 if (DateTime.Now >= juego.FechaEmpieza && DateTime.Now <= juego.FechaTermina)
                 {
                     Juegos.Juego juego2 = BaseDatos.Juegos.Buscar.UnJuego(juego.JuegoId.ToString());
-
-                    juego.Imagen = await Herramientas.Imagenes.DescargarYGuardar(juego2.Imagenes.Header_460x215, "juegos", juego2.Id.ToString(), "library_600x900", dominio);
+                    juego.Imagen = juego2.Imagenes.Header_460x215;
                     juego.Juego = juego2;
 
                     juegosActuales.Add(juego);
@@ -414,77 +400,6 @@
             if (juegosActuales.Count > 0)
             {
                 juegosActuales = juegosActuales.OrderBy(x => x.Nombre).ToList();
-
-                int juegos = 0;
-                int dlcs = 0;
-
-                foreach (var juego in juegosActuales)
-                {
-                    if (juego.Juego.Tipo == Juegos.JuegoTipo.Game)
-                    {
-                        juegos += 1;
-                    }
-                    else if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
-                    {
-                        dlcs += 1;
-                    }
-                }
-
-                if (juegos == 0)
-                {
-                    if (dlcs == 1)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String6"), dlcs.ToString()) + " " + Herramientas.Idiomas.CogerCadena(idioma, "Free.String8");
-                    }
-                    else if (dlcs > 1)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String7"), dlcs.ToString()) + " " + Herramientas.Idiomas.CogerCadena(idioma, "Free.String9");
-                    }
-                }
-                else if (juegos > 0)
-                {
-                    if (juegos == 1 && dlcs == 0)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String3"), juegos.ToString()) + " " + Herramientas.Idiomas.CogerCadena(idioma, "Free.String8");
-                    }
-                    else if (juegos > 1 && dlcs == 0)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String4"), juegos.ToString()) + " " + Herramientas.Idiomas.CogerCadena(idioma, "Free.String9");
-                    }
-                    else if (juegos == 1 && dlcs == 1)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String3"), juegos.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String5") + " " +
-                            string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String6"), dlcs.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String9");
-                    }
-                    else if (juegos > 1 && dlcs == 1)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String4"), juegos.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String5") + " " +
-                            string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String6"), dlcs.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String9");
-                    }
-                    else if (juegos == 1 && dlcs > 1)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String3"), juegos.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String5") + " " +
-                            string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String7"), dlcs.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String9");
-                    }
-                    else if (juegos > 1 && dlcs > 1)
-                    {
-                        titulo = string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String4"), juegos.ToString()) + " " + 
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String5") + " " +
-                            string.Format(Herramientas.Idiomas.CogerCadena(idioma, "Free.String7"), dlcs.ToString()) + " " +
-                            Herramientas.Idiomas.CogerCadena(idioma, "Free.String9");
-                    }
-                }
-
-                if (string.IsNullOrEmpty(titulo) == true)
-                {
-                    titulo = Herramientas.Idiomas.CogerCadena(idioma, "Free.String10");
-                }
             }
 
             if (juegosPasados.Count > 0)
