--- a/pepeizqs deals web/Pages/historical-lows.cshtml
+++ b/pepeizqs deals web/Pages/historical-lows.cshtml
@@ -8,4 +8,6 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma}))
+@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new { 
+	idioma = @Model.idioma
+}))
