--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -76,232 +76,225 @@
 							juegosTier = juegosTier.OrderBy(x => x.Nombre).ToList();
 						}
 
-						if (bundle.Pick == true)
-						{
-							<div class="perfil" style="display: flex; align-items: center; width: 100%; flex-direction: row; font-size: 18px; padding: 20px; margin-bottom: 20px;">
-								@foreach (var tier2 in OrdenarTiers(bundle.Tiers))
-								{
-									<div style="width: 100%; text-align: center;">
-										@if (tier2.CantidadJuegos == 1)
-										{
-											<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String21") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label>
-										}
-										else if (tier2.CantidadJuegos > 1)
-										{
-											<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String8") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label> <label>/</label> <label style="font-size: 14px;">@ArreglarPrecio(decimal.Parse(tier2.Precio) / tier2.CantidadJuegos) (@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String20"))</label>
-										}										
-									</div>
-								}
-							</div>
-						}
-						else
-						{
-							<div class="perfil" style="font-size: 18px; padding: 20px 40px; margin-bottom: 20px;">
-								<div style="margin-bottom: 5px;">
-									Tier @tier.Posicion: @ArreglarPrecio(decimal.Parse(tier.Precio))
-								</div>
-
-								@foreach (var juego in juegosTier)
-								{
-									if (juego.Juego.PrecioMinimosHistoricos != null)
-									{
-										foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
-										{
-											if (historico.DRM == juego.DRM)
-											{
-												totalMinimos = totalMinimos + historico.Precio;
-
-												break;
-											}
-										}
-									}
-								}
-
-								<div style="font-size: 14px;">
-									@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String14"): @ArreglarPrecio(totalMinimos)
-								</div>
-							</div>
-						}
-
-						foreach (var juego in juegosTier)
-						{
-							bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
-							bool usuarioTieneDeseado = false;
-
-							string fondoColor = string.Empty;
-
-							if (usuarioTieneJuego == true)
+						<div class="perfil" style="font-size: 18px; padding: 20px 40px; margin-bottom: 20px;">
+							@if (bundle.Pick == true)
 							{
-								fondoColor = "background-color: var(--fondoBien);";
+								<div style="display: flex; align-items: center; width: 100%; flex-direction: row; font-size: 18px; padding: 20px 0px; margin-bottom: 20px;">
+									@foreach (var tier2 in OrdenarTiers(bundle.Tiers))
+									{
+										<div style="width: 100%; text-align: center;">
+											@if (tier2.CantidadJuegos == 1)
+											{
+												<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String21") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label>
+											}
+											else if (tier2.CantidadJuegos > 1)
+											{
+												<label>@tier2.CantidadJuegos.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String8") • @ArreglarPrecio(decimal.Parse(tier2.Precio))</label> <label>/</label> <label style="font-size: 14px;">@ArreglarPrecio(decimal.Parse(tier2.Precio) / tier2.CantidadJuegos) (@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String20"))</label>
+											}										
+										</div>
+									}
+								</div>
 							}
 							else
 							{
-								usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
+								<div style="font-size: 18px; padding: 20px 0px; margin-bottom: 20px;">
+									<div style="margin-bottom: 5px;">
+										Tier @tier.Posicion: @ArreglarPrecio(decimal.Parse(tier.Precio))
+									</div>
 
-								if (usuarioTieneDeseado == true)
-								{
-									fondoColor = "background-color: var(--fondoAlerta);";
-								}
-							}
-
-							bool usuarioConectado = false;
-
-							if (usuario != null)
-							{
-								usuarioConectado = true;
-							}
-
-							Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
-
-							<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
-								<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno">
-									@if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
+									@foreach (var juego in juegosTier)
 									{
-										<video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
+										if (juego.Juego.PrecioMinimosHistoricos != null)
+										{
+											foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
+											{
+												if (historico.DRM == juego.DRM)
+												{
+													totalMinimos = totalMinimos + historico.Precio;
+
+													break;
+												}
+											}
+										}
 									}
 
-									<div style="padding: 15px; text-align: center;">
-										<div style="text-align: center;">
-											@tooltipDatos.Nombre
-										</div>
-
-										@if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
-										{
-											<div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-												<img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
-												<label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
-											</div>
-										}
-
-										@if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
-										{
-											<div style="text-align: center;">
-												@tooltipDatos.UsuarioMensaje
-											</div>
-										}
+									<div style="font-size: 14px;">
+										@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String14"): @ArreglarPrecio(totalMinimos)
 									</div>
 								</div>
+							}
 
-								@{
-									string marginIzq = string.Empty;
+							@foreach (var juego in juegosTier)
+							{
+								bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
+								bool usuarioTieneDeseado = false;
 
-									if (bundle.Pick == false)
+								string fondoColor = string.Empty;
+
+								if (usuarioTieneJuego == true)
+								{
+									fondoColor = "background-color: var(--fondoBien);";
+								}
+								else
+								{
+									usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
+
+									if (usuarioTieneDeseado == true)
 									{
-										marginIzq = "margin-left: 40px;";
+										fondoColor = "background-color: var(--fondoAlerta);";
 									}
 								}
 
-								<div style="margin-bottom: 20px; @marginIzq">
-									<a href="/game/@juego.JuegoId/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
-										<div style="display: flex; align-items: center; padding: 2px;">
-											<div style="text-align: center; width: 17%;">
-												<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
+								bool usuarioConectado = false;
+
+								if (usuario != null)
+								{
+									usuarioConectado = true;
+								}
+
+								Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
+
+								<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
+									<div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno">
+										@if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
+										{
+											<video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
+										}
+
+										<div style="padding: 15px; text-align: center;">
+											<div style="text-align: center;">
+												@tooltipDatos.Nombre
 											</div>
 
-											<div style="padding-left: 20px; padding-right: 20px; text-align: left;">
-												<div style="margin-bottom: 7px; font-size: 17px;">
-													@juego.Nombre
+											@if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
+											{
+												<div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
+													<img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" />
+													<label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
+												</div>
+											}
+
+											@if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
+											{
+												<div style="text-align: center;">
+													@tooltipDatos.UsuarioMensaje
+												</div>
+											}
+										</div>
+									</div>
+
+									<div style="margin-bottom: 20px;">
+										<a href="/game/@juego.JuegoId/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" class="boton-pequeño" style="padding: 0px; text-align: center; position: relative; @fondoColor">
+											<div style="display: flex; align-items: center; padding: 2px;">
+												<div style="text-align: center; width: 17%;">
+													<img src="@juego.Imagen" style="width: 100%; height: 100%;" />
 												</div>
 
-												<div style="display: flex; align-items: center;">
-													<div>
-														<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
+												<div style="padding-left: 20px; padding-right: 20px; text-align: left;">
+													<div style="margin-bottom: 7px; font-size: 17px;">
+														@juego.Nombre
 													</div>
 
-													@if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
-													{
-														<div style="margin-left: 15px; font-size: 14px; background: var(--fondoDlc);">
-															<span style="padding: 4px 6px; line-height: 24px; vertical-align: middle;">@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String15")</span>
+													<div style="display: flex; align-items: center;">
+														<div>
+															<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
 														</div>
-													}
-												</div>
-											</div>
 
-											<div style="margin-left: auto; margin-right: 15px; display: flex; align-items: center; font-size: 15px;">
-												@{
-													if (juego.Juego.PrecioMinimosHistoricos != null)
-													{
-														foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
+														@if (juego.Juego.Tipo == Juegos.JuegoTipo.DLC)
 														{
-															if (historico.DRM == juego.DRM)
+															<div style="margin-left: 15px; font-size: 14px; background: var(--fondoDlc);">
+																<span style="padding: 4px 6px; line-height: 24px; vertical-align: middle;">@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String15")</span>
+															</div>
+														}
+													</div>
+												</div>
+
+												<div style="margin-left: auto; margin-right: 15px; display: flex; align-items: center; font-size: 15px;">
+													@{
+														if (juego.Juego.PrecioMinimosHistoricos != null)
+														{
+															foreach (var historico in juego.Juego.PrecioMinimosHistoricos)
 															{
-																<div style="padding-left: 20px; text-align: center;">
-																	<div style="margin-bottom: 5px;">
-																		@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String9")
+																if (historico.DRM == juego.DRM)
+																{
+																	<div style="padding-left: 20px; text-align: center;">
+																		<div style="margin-bottom: 5px;">
+																			@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String9")
+																		</div>
+
+																		<div>
+																			@ArreglarPrecio(historico.Precio)
+																		</div>
 																	</div>
 
-																	<div>
-																		@ArreglarPrecio(historico.Precio)
-																	</div>
-																</div>
-
-																break;
+																	break;
+																}
 															}
 														}
-													}
 
-													int bundlesEstado = 0;
+														int bundlesEstado = 0;
 
-													if (juego.Juego.Bundles != null)
-													{
-														bundlesEstado = juego.Juego.Bundles.Count;
-
-														if (bundlesEstado > 0)
+														if (juego.Juego.Bundles != null)
 														{
-															bundlesEstado -= 1;
+															bundlesEstado = juego.Juego.Bundles.Count;
+
+															if (bundlesEstado > 0)
+															{
+																bundlesEstado -= 1;
+															}
 														}
+
+														<div style="padding-left: 20px; text-align: center;">
+															<div style="margin-bottom: 5px;">
+																@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String10")
+															</div>
+
+															<div>
+																@bundlesEstado
+															</div>
+														</div>
+
+														int gratisEstado = 0;
+
+														if (juego.Juego.Gratis != null)
+														{
+															gratisEstado = juego.Juego.Gratis.Count;
+														}
+
+														<div style="padding-left: 20px; text-align: center;">
+															<div style="margin-bottom: 5px;">
+																@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String11")
+															</div>
+
+															<div>
+																@gratisEstado
+															</div>
+														</div>
+
+														int suscripcionesEstado = 0;
+
+														if (juego.Juego.Suscripciones != null)
+														{
+															suscripcionesEstado = juego.Juego.Suscripciones.Count;
+														}
+
+														<div style="padding-left: 20px; text-align: center;">
+															<div style="margin-bottom: 5px;">
+																@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String12")
+															</div>
+
+															<div>
+																@suscripcionesEstado
+															</div>
+														</div>
 													}
-
-													<div style="padding-left: 20px; text-align: center;">
-														<div style="margin-bottom: 5px;">
-															@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String10")
-														</div>
-
-														<div>
-															@bundlesEstado
-														</div>
-													</div>
-
-													int gratisEstado = 0;
-
-													if (juego.Juego.Gratis != null)
-													{
-														gratisEstado = juego.Juego.Gratis.Count;
-													}
-
-													<div style="padding-left: 20px; text-align: center;">
-														<div style="margin-bottom: 5px;">
-															@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String11")
-														</div>
-
-														<div>
-															@gratisEstado
-														</div>
-													</div>
-
-													int suscripcionesEstado = 0;
-
-													if (juego.Juego.Suscripciones != null)
-													{
-														suscripcionesEstado = juego.Juego.Suscripciones.Count;
-													}
-
-													<div style="padding-left: 20px; text-align: center;">
-														<div style="margin-bottom: 5px;">
-															@Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String12")
-														</div>
-
-														<div>
-															@suscripcionesEstado
-														</div>
-													</div>
-												}
+												</div>
 											</div>
-										</div>
-									</a>
-								</div>	
-							</div>
-						}
+										</a>
+									</div>	
+								</div>
+							}
+						</div>
 					}
 				</div>
 
