--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -122,7 +122,7 @@
 
                 @if (resultados != null)
                 {
-                    @if (resultados.Count > 0)
+                    if (resultados.Count > 0)
                     {
                         <div class="buscador-panel" style="display: flex; align-items: start;">
                             <div style="width: 20%; padding-right: 20px;">
@@ -172,7 +172,7 @@
                                     @foreach (var juego in resultadosFinal)
                                     {
                                         <div class="perfil-flexible-centrado" style="margin-top: 10px;">
-                                            <a class="boton-pequeño" href="/game/@juego.Id" style="padding: 0px;">
+                                            <a class="boton-pequeño" href="/game/@juego.Id/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" style="padding: 0px;">
                                                 <div class="perfil-flexible-centrado">
                                                     <div>
                                                         <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 107px;" />
